--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-MONGO_URI = mongodb+srv://bedirhansay:.bedirhan.1@cluster0.h8cmpua.mongodb.net/food-ordering?retryWrites=true&w=majority
-GITHUB_ID = 250dd84159aad48d6991
-GITHUB_SECRET = 0924320f2ec490e7dd8e8a3958f282351fce19ea
+MONGO_URI = mongodb+srv://bedirhansay:.bedirhan.1@cluster0.h8cmpua.mongodb.net/user?retryWrites=true&w=majority
+
+
+
